[package]
name = "lego_elevation"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
clap = { version = "4.5.18", features = ["derive"]}
geo = "0.28.0"
grid = "0.15.0"
indicatif = "0.17.8"
latlon = "0.1.3"
log = "0.4.22"
minreq = { version = "2.12.0", features = ["https", "json-using-serde", "urlencoding"]}
serde = { version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
simplelog = "0.12.2"
